lab2/lab2_ws/log/build_2023-07-22_11-15-20/safety_node/stderr.log
  File "/root/F1Tenth-Labs/lab2/lab2_ws/install/safety_node/lib/python3.8/site-packages/safety_node/safety_node.py", line 54
    self.get_logger().info(f"TTC: {ttc})
                                       ^
SyntaxError: EOL while scanning string literal

